# airflow-operator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.nix  Cargo.toml  Makefile  README.md  Tiltfile  crate-hashes.json  default.nix  deny.toml  shell.nix
.ci/integration-tests/hcloud-centos-8/: cluster.yaml  test.sh
.github/ISSUE_TEMPLATE/: 02-bug_report.yml  bug_report.yml  config.yml  new_version.md
.github/workflows/: build.yaml  build.yml  integration-test.yml  pr_pre-commit.yaml  publish_main_artifacts.yml  publish_pr_artifacts.yml  publish_release_artifacts.yml  reviewdog.yaml
.readme/: README.md.j2
.readme/partials/: main.md.j2
deploy/: DO_NOT_EDIT.md
deploy/config-spec/: properties.yaml
deploy/crd/: airflowcluster.crd.yaml  airflowdb.crd.yaml  init.crd.yaml
deploy/helm/airflow-operator/: .helmignore  Chart.yaml  README.md  values.registry-oci.yaml  values.registry-quay.yaml  values.yaml
deploy/helm/airflow-operator/crds/: crds.yaml
deploy/helm/airflow-operator/templates/: _helpers.tpl  clusterrole-operator.yaml  clusterrole-product.yaml  deployment.yaml  roles.yaml  service.yaml
deploy/helm/airflow-operator/values/: oci.stackable.tech.yaml  quay.io.yaml
deploy/manifests/: configmap.yaml  crds.yaml  deployment.yaml  roles.yaml  serviceaccount.yaml
deploy/olm/: bundle.sh
deploy/olm/23.1.0/manifests/: stackable-airflow-operator.clusterserviceversion.yaml
deploy/olm/23.4.0/manifests/: airflowcluster.yaml  configmap.yaml  stackable-airflow-operator.clusterserviceversion.yaml
docker/: Dockerfile
docs/: antora.yml  templating_vars.yaml
docs/modules/ROOT/examples/: example-airflow-dags-configmap.yaml  example-airflow-dags-pvc.yaml  example-airflow-incluster.yaml  example-airflow-spark-clusterrolebinding.yaml  example-pvc.yaml  (+2 more)
examples/: airflow-spark-clusterrole.yaml  assert-pvc-airflow.yaml  assert-pvc.yaml  init.command.example.yaml  pvc-airflow.yaml  pvc.yaml  simple-airflow-cluster-dags-cmap.yaml  simple-airflow-cluster-dags-pvc.yaml  simple-airflow-cluster-ldap-insecure-tls.yaml  simple-airflow-cluster-ldap.yaml  simple-airflow-cluster-spark.yaml  simple-airflow-cluster.yaml  simple-airflow-credentials-secret.yaml
extra/: crds.yaml
nix/: meta.json  sources.json
rust/crd/: Cargo.toml
rust/crd/src/: affinity.rs  airflowdb.rs  authentication.rs  authorization.rs  commands.rs  git_sync.rs  lib.rs  patch.rs
rust/crd/src/v1alpha1/: lib.rs
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: airflow_controller.rs  airflow_db_controller.rs  config.rs  connection.rs  controller.rs  controller_commons.rs  discovery.rs  env_vars.rs  flask_config_writer.rs  framework.rs  init_controller.rs  main.rs  product_logging.rs  rbac.rs  service.rs  util.rs  worker_controller.rs
rust/operator-binary/src/airflow_controller/: apply.rs  build.rs  fetch.rs  types.rs
rust/operator-binary/src/airflow_db_controller/: apply.rs  build.rs  fetch.rs  types.rs
rust/operator-binary/src/common/: config.rs  controller_commons.rs  error_handling.rs  mod.rs  product_logging.rs  rbac.rs
rust/operator-binary/src/config/: mod.rs  webserver_config.rs
rust/operator-binary/src/connections/: database.rs  mod.rs  queue.rs
rust/operator-binary/src/controller/: apply.rs  build.rs  dereference.rs  mod.rs  update_status.rs  validate.rs
rust/operator-binary/src/crd/: affinity.rs  authentication.rs  authorization.rs  databases.rs  git_sync.rs  internal_secret.rs  mod.rs  utils.rs
rust/operator-binary/src/framework/: builder.rs  flask_app_config_writer.rs  role_group_utils.rs  role_utils.rs
rust/operator-binary/src/framework/builder/: meta.rs  pdb.rs
rust/operator-binary/src/framework/builder/pod/: container.rs
rust/operator-binary/src/framework/kvp/: label.rs
rust/operator-binary/src/framework/macros/: attributed_string_type.rs
rust/operator-binary/src/framework/product_logging/: framework.rs
rust/operator-binary/src/framework/types/: kubernetes.rs  operator.rs
rust/operator-binary/src/operations/: graceful_shutdown.rs  mod.rs  pdb.rs
rust/operator-binary/src/webhooks/: conversion.rs
rust/operator-binary/test/ldap/: authentication_class.yaml
rust/operator-binary/test/smoke/: cluster.yaml  db.yaml  properties.yaml
scripts/: docs_templating.sh  generate-manifests.sh  run-tests
tests/: infrastructure.yaml  interu.yaml  kuttl-test.yaml.jinja2  release.yaml  test-definition.yaml
(+381 files in other folders)
