[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Contains the Apache Airflow CRD structs and utilities"
edition = "2021"
license = "OSL-3.0"
name = "stackable-airflow-crd"
repository = "https://github.com/stackabletech/airflow-operator"
version = "23.7.0"
publish = false

[dependencies]
serde = "1.0"
serde_json = "1.0"
snafu = "0.7"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.44.0" }
strum = { version = "0.24", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
serde_yaml = "0.8"
rstest = "0.17"
