[package]
name = "stackable-airflow-operator"
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Operator for Apache Airflow"
license = "OSL-3.0"
version = "0.3.0-nightly"
edition = "2021"
repository = "https://github.com/stackabletech/airflow-operator"

[dependencies]
anyhow = "1.0"
clap = "3.0.4"
fnv = "1.0"
futures = { version = "0.3", features = ["compat"] }
serde = "1.0"
serde_yaml = "0.8"
snafu = "0.6"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.8.0" }
stackable-airflow-crd = { path = "../crd" }
structopt = "0.3"
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
strum = "0.23"
strum_macros = "0.23"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.8.0" }
stackable-airflow-crd = { path = "../crd" }
