[package]
name = "stackable-airflow-operator"
description = "Stackable Operator for Apache Airflow"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-airflow-crd = { path = "../crd" }

anyhow.workspace = true
clap.workspace = true
fnv.workspace = true
futures.workspace = true
serde.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
product-config.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true

[build-dependencies]

built.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
