[package]
name = "stackable-airflow-operator"
description = "Stackable Operator for Apache Airflow"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
product-config.workspace = true
stackable-operator.workspace = true

anyhow.workspace = true
clap.workspace = true
const_format.workspace = true
fnv.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true
indoc.workspace = true

[build-dependencies]
built.workspace = true

[dev-dependencies]
rstest.workspace = true
serde_yaml.workspace = true
